--- a/events/RS Conf/2018-02-10 RS Conf 2018.yaml
+++ b/events/RS Conf/2018-02-10 RS Conf 2018.yaml
@@ -30,7 +30,7 @@ talks:
     video: https://youtu.be/_P5aiH1RLOI
     presentation: https://speakerdeck.com/jawache/how-to-hack-a-node-app-at-rollingscopes-2018-in-minsk-belarus
     lang: en
-  - name: "Что не так с мобильным вебом"
+  - name: "Что не так с мобильным вебом?"
     speaker: Денис Ильин
     video: https://youtu.be/5aNhBdyv9-4
     presentation: https://www.dropbox.com/s/ea1d464ozfwazik/%D0%94%D0%B5%D0%BD%D0%B8%D1%81%20%D0%98%D0%BB%D1%8C%D0%B8%D0%BD%20-%20%D0%A7%D1%82%D0%BE%20%D0%BD%D0%B5%20%D1%82%D0%B0%D0%BA%20%D1%81%20%D0%BC%D0%BE%D0%B1%D0%B8%D0%BB%D1%8C%D0%BD%D1%8B%D0%BC%20%D0%B2%D0%B5%D0%B1%D0%BE%D0%BC%20RSConf.pdf?dl=0
