--- a/events/Tbilisi JS/2024-06-01 Tbilisi JS Conf 2024.yaml
+++ b/events/Tbilisi JS/2024-06-01 Tbilisi JS Conf 2024.yaml
@@ -1,6 +1,6 @@
 name: Tbilisi JS Conf 2024
 date: 2024-06-01
-videos: https://youtu.be/gDP3WcDVImo
+videos: https://www.youtube.com/playlist?list=PLduqjbnjNUvc3usYK9ixCP_jK0tOswZGn
 talks:
   - name: Dial "M" for Maintainability. Part 2
     speaker: Азат Давлятшин
