--- a/events/Tbilisi JS/2024-10-31 Tbilisi JS Meetup 3.yaml
+++ b/events/Tbilisi JS/2024-10-31 Tbilisi JS Meetup 3.yaml
@@ -1,20 +1,20 @@
 name: Tbilisi JS Meetup 3
 date: 2024-10-31
-videos: https://youtu.be/utg5WbzlN80
+videos: https://www.youtube.com/playlist?list=PLduqjbnjNUvd0LmFiMG30orojP_kTalhL
 talks:
   - name: Дебаг производительности страницы средствами браузера
     speaker: Никита Дубко
-    video: 
+    video: https://youtu.be/CBi-ycq3tuo
     presentation: https://t.me/tbilisi_js_chat/11885
   - name: Дизайн-система — это не про дизайн, а про взаимодействие
     speaker: Егор Нечаев
-    video: 
+    video: https://youtu.be/mu2KOGv-sus
     presentation: https://t.me/tbilisi_js_chat/11886
   - name: Управляем флотом промышленных батарей с помощью SPA на React
     speaker: Виктор Истомин
-    video: 
+    video: https://youtu.be/O9Rid_RNJPE
     presentation: https://t.me/tbilisi_js_chat/11896
   - name: Как разработчик может помочь расти своему тимлиду
     speaker: Тимур Гафиулин
-    video: 
+    video: https://youtu.be/qEELxhmZT6k
     presentation: https://tgafiulin.github.io/openconf_2024/
