--- a/events/Tbilisi JS/2024-11-02 Tbilisi A11Y & UX Day.yaml
+++ b/events/Tbilisi JS/2024-11-02 Tbilisi A11Y & UX Day.yaml
@@ -1,28 +1,28 @@
 name: Tbilisi A11Y & UX Day
 date: 2024-11-02
-videos: https://youtu.be/TRn2gNBKZgg
+videos: https://www.youtube.com/playlist?list=PLduqjbnjNUvexNfKtYxPaZWSGP4M9uA81
 talks:
   - name: State of a11y
     speaker: Вадим Макеев
-    video: 
+    video: https://youtu.be/gMwS69xVmRE
     presentation: 
   - name: Спидран по доступности
     speaker: Максим Хализов
-    video: 
+    video: https://youtu.be/QJz1uIO4QKk
     presentation: https://docs.google.com/presentation/d/1cOaSTntFbgmohVTO6drP0FU4HzrQ2PT_rkqkQtYyCUE/edit?usp=drivesdk
   - name: Доступность и типографика
     speaker: Татьяна Фокина
-    video: 
+    video: https://youtu.be/F64bGVrI4TY
     presentation: https://tatianafokina.github.io/talks/a11y-and-typography/
   - name: Очень интересно, ничего не понятно, или про доступность как декомпозицию сложности
     speaker: Андрей Евдоков
-    video: 
+    video: https://youtu.be/IDGvUb9hZJ4
     presentation: https://t.me/tbilisi_js_chat/12128
   - name: Что вообще такое этот ваш UX
     speaker: Илона Саркисова
-    video: 
+    video: https://youtu.be/SjWrAjTWVQI
     presentation: https://www.figma.com/proto/oKCSJK2wLRj0sPmGqzRjRA/Decks?page-id=1289%3A121&node-id=1289-122&scaling=scale-down-width&content-scaling=fixed&t=ayjbhNiupwdVPazx-1
   - name: Доступность на примере индустрии глиняных горшков
     speaker: Филипп Барановский
-    video: 
+    video: https://youtu.be/IyyrhIX3Bxg
     presentation: https://t.me/tbilisi_js_chat/12147
